--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: PHOTORAMA
 email: ""
 description: "Photo Journal"
-url: "http://sunbliss.github.io"
-baseurl: "/photorama"
+url: "http://catyeah.github.io"
+baseurl: "/blog"
 facebook_username: ""
 twitter_username: ""
 instagram_username: ""
@@ -33,9 +33,9 @@ comments :
 
 # Internal nav
 nav:
-  - GALLERY: "http://sunbliss.github.io/photorama/gallery/"  
-  - JOURNAL: "http://sunbliss.github.io/photorama/journal/"
-  - ABOUT: "http://sunbliss.github.io/photorama/about/"
+  - GALLERY: "http://catyeah.github.io/blog/gallery/"  
+  - JOURNAL: "http://catyeah.github.io/blog/journal/"
+  - ABOUT: "http://catyeah.github.io/blog/about/"
 
 # All translation keys
 translations:
