Added instagram username

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "http://catyeah.github.io"
 baseurl: "/blog"
 facebook_username: ""
 twitter_username: ""
-instagram_username: ""
+instagram_username: "catyeah"
 github_username:  ""
 deviantart_username: ""
 flickr_username: ""
